--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,8 @@ jobs:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
-      ref: add-github-action
+      with:
+        ref: add-github-action
 
     # Install the latest version of the Terraform CLI
     - name: Setup Terraform
