--- a/.github/workflows/build-resource.yaml
+++ b/.github/workflows/build-resource.yaml
@@ -21,11 +21,6 @@ env:
   ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
 
 jobs:
-  debug:
-    name: 'Debug'
-    run: |
-      ${PWD}
-      ls
   terraform-plan:
     name: 'Terraform Plan'
     runs-on: ubuntu-latest
@@ -45,6 +40,11 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_wrapper: false
+    
+    - name: 'Debug'
+      run: |
+        ${PWD}
+        ls
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
