--- a/.github/workflows/build-resource.yaml
+++ b/.github/workflows/build-resource.yaml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
     - main
+    - doak-pro
 
 #Special permissions required for OIDC authentication
 permissions:
