--- a/.github/workflows/build-resource.yaml
+++ b/.github/workflows/build-resource.yaml
@@ -53,7 +53,7 @@ jobs:
     - name: Terraform Plan
       id: tf-plan
       run: |
-        ls
+        pwd
         export exitcode=0
         terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
         echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
