--- a/.github/workflows/build-resource.yaml
+++ b/.github/workflows/build-resource.yaml
@@ -41,12 +41,12 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform init -chdir /home/runner/work/DoakOps/DoakOps
+      run: terraform init -chdir=/home/runner/work/DoakOps/DoakOps
 
     # Checks that all Terraform configuration files adhere to a canonical format
     # Will fail the build if not
     - name: Terraform Format
-      run: terraform fmt -checkn -chdir /home/runner/work/DoakOps/DoakOps
+      run: terraform fmt -checkn -chdir=/home/runner/work/DoakOps/DoakOps
 
     # Generates an execution plan for Terraform
     # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
@@ -55,7 +55,7 @@ jobs:
       run: |
         pwd
         export exitcode=0
-        terraform plan -chdir /home/runner/work/DoakOps/DoakOps -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+        terraform plan -chdir=/home/runner/work/DoakOps/DoakOps -detailed-exitcode -no-color -out tfplan || export exitcode=$?
         echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
         
         if [ $exitcode -eq 1 ]; then
