--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,9 @@ jobs:
           action: "upload"
           ###### Repository/Build Configurations ######
           app_location: "/site" # App source code path relative to repository root
-          # api_location: "api" # Api source code path relative to repository root - optional
-          # output_location: "public" # Built app content directory, relative to app_location - optional
-          ###### End of Repository/Build Configurations ######
+          api_location: "api" # Api source code path relative to repository root - optional
+          output_location: "public" # Built app content directory, relative to app_location - optional
+          ##### End of Repository/Build Configurations ######
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
