--- a/site/config.toml
+++ b/site/config.toml
@@ -43,7 +43,7 @@ paginate = 5
         name = "About"
         url = "/about"
       [[languages.en.menu.main]]
-        identifier = "showcase"
-        name = "Showcase"
-        url = "/showcase"
+        identifier = "collections"
+        name = "Collections"
+        url = "/collections"
 
