--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
           submodules: true
       - name: Build App
         run: |
-          cd site
+          cd /site
           npm install
           npm run build
       - name: Upload build artifact
