--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,50 +1,33 @@
-name: Deploy Azure Static Web App
+name: Deploy web app to Azure Static Web Apps
+
+env:
+  APP_LOCATION: "/site" 
+  OUTPUT_LOCATION: "build" 
 
 on:
   push:
     branches:
       - main
 
-jobs:
-  deploy_dev:
-    runs-on: ubuntu-latest
-    environment: develop
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: site-build
-          path: site/public
-      - name: Deploy to Azure Static Web Apps (Dev)
-        uses: Azure/static-web-apps-deploy@v1
-        with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_DEV }}
-          action: "upload"
-          app_location: "/site"
-          api_location: "api"
-          output_location: "public"
+permissions:
+  issues: write
+  contents: read
+  pull-requests: write
 
-  deploy_prod:
+jobs:
+  build_and_deploy:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
-    needs: deploy_dev
-    environment: production
+    name: Build and Deploy
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           submodules: true
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: site-build
-          path: site/public
-      - name: Deploy to Azure Static Web Apps (Prod)
-        uses: Azure/static-web-apps-deploy@v1
+      - name: Build And Deploy
+        uses: Azure/static-web-apps-deploy@1a947af9992250f3bc2e68ad0754c0b0c11566c9
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/site"
-          api_location: "api"
-          output_location: "public"
+          app_location: ${{ env.APP_LOCATION }}
+          output_location: ${{ env.OUTPUT_LOCATION }}
