--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy web app to Azure Static Web Apps
 
 env:
   APP_LOCATION: "/site" 
-  OUTPUT_LOCATION: "build" 
+  OUTPUT_LOCATION: "public" 
 
 on:
   push:
