--- a/.github/workflows/deploy-resources.yaml
+++ b/.github/workflows/deploy-resources.yaml
@@ -17,10 +17,12 @@ jobs:
       uses: actions/checkout@v3
 
     # Log in to Azure
-    - name: Azure Login
-      uses: azure/login@v1
+    - name: Azure login
+      uses: azure/login@v2
       with:
-        creds: ${{ secrets.AZURE_DEV_CREDENTIALS }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }
 
     # Install Azure CLI and Bicep CLI
     - name: Install Azure CLI and Bicep
@@ -34,7 +36,7 @@ jobs:
         az deployment group create \
           --resource-group <dev-resource-group-name> \
           --template-file infra/doakops-dev-exported-template.bicep \
-          --parameters staticSites_doakops_dev_name=<dev-static-site-name>
+          --parameters staticSites_doakops_dev_name=doakops-dev
 
   deploy-prod:
     name: Deploy to Prod
@@ -63,6 +65,6 @@ jobs:
     - name: Deploy Bicep File to Prod
       run: |
         az deployment group create \
-          --resource-group <prod-resource-group-name> \
+          --resource-group doakops-prod \
           --template-file infra/doakops-prod-exported-template.bicep \
-          --parameters staticSites_doakops_dev_name=<prod-static-site-name>
+          --parameters staticSites_doakops_dev_name=doakops-prod
