--- a/.github/workflows/deploy-resources.yaml
+++ b/.github/workflows/deploy-resources.yaml
@@ -6,6 +6,10 @@ on:
       - main  # Trigger deployment to dev on push to main
   workflow_dispatch:  # Allow manual trigger for prod deployment
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy-dev:
     name: Deploy to Dev
