--- a/.github/workflows/deploy-resources.yaml
+++ b/.github/workflows/deploy-resources.yaml
@@ -22,11 +22,9 @@ jobs:
 
     # Log in to Azure
     - name: Azure login
-      uses: azure/login@v2
+    - uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     # Install Azure CLI and Bicep CLI
     - name: Install Azure CLI and Bicep
