--- a/.github/workflows/deploy-resources.yaml
+++ b/.github/workflows/deploy-resources.yaml
@@ -22,7 +22,7 @@ jobs:
 
     # Log in to Azure
     - name: Azure login
-    - uses: azure/login@v2
+      uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
