--- a/.github/workflows/deploy-resources.yaml
+++ b/.github/workflows/deploy-resources.yaml
@@ -14,6 +14,7 @@ jobs:
   deploy-dev:
     name: Deploy to Dev
     runs-on: ubuntu-latest
+    environment: develop 
 
     steps:
     # Checkout the repository
