--- a/.github/workflows/deploy-resources.yaml
+++ b/.github/workflows/deploy-resources.yaml
@@ -45,6 +45,7 @@ jobs:
     name: Deploy to Prod
     runs-on: ubuntu-latest
     needs: deploy-dev  # Ensure dev deployment completes first
+    environment: Production
     if: github.event_name == 'workflow_dispatch'  # Only run on manual trigger
 
     steps:
@@ -56,7 +57,7 @@ jobs:
     - name: Azure Login
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_PROD_CREDENTIALS }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     # Install Azure CLI and Bicep CLI
     - name: Install Azure CLI and Bicep
